kube/moodies-ingress-tls.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moodies-ingress
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - www.moodies.cash
    - moodies.cash
    secretName: moodies-tls
  defaultBackend:
    service:
      name: moodies
      port:
        number: 852
  rules:
  - host: moodies.cash
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: moodies
            port:
              number: 852
  - host: www.moodies.cash
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: moodies
            port:
              number: 852
